# agentic-projects

./: .gitignore
codemapper/: Makefile  config.yaml  pyproject.toml
codemapper/codemapper/: __init__.py  daemon.py  main.py  scheduler.py  store.py  watcher.py
codemapper/codemapper/llm/: __init__.py  client.py  prompts.py
codemapper/codemapper/processor/: __init__.py  cache.py  graph.py  imports.py  parser.py  queue_manager.py
codemapper/codemapper/utils/: __init__.py  file_ops.py  gitignore.py
