[project]
name = "codemapper"
version = "0.1.0"
description = "Local codebase mapping tool using LLM for intelligent code summarization"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.4.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "watchdog>=6.0.0",
    "pathspec>=0.12.0",
    "rich>=13.9.0",
    "typer>=0.15.0",
    "pyyaml>=6.0.0",
    "apscheduler>=3.10.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
mapper = "codemapper.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["codemapper"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportUnknownParameterType = false
reportUntypedBaseClass = false
